Update it for latest RN 0.49
prop-types and create-react-class

There is already an open PR but until this is merged we need to use a
fork

--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "react-component",
     "ios",
     "tooltip"
-  ]
+  ],
+  "dependencies": {
+    "prop-types": "^15.6.0",
+    "react-create-class": "^1.0.0"
+  }
 }
